@startuml
'https://plantuml.com/class-diagram

'泛化(继承)
Pizza <|-- ShanghaiAPizza
Pizza <|-- ShanghaiBPizza
Pizza <|-- BeijingAPizza
Pizza <|-- BeijingBPizza

'泛化(继承)
AbstractFactory <|-- ShanghaiFactory
AbstractFactory <|-- BeijingFactory

'依赖
ShanghaiFactory ..> ShanghaiAPizza
ShanghaiFactory ..> ShanghaiBPizza

'依赖
BeijingFactory ..> BeijingAPizza
BeijingFactory ..> BeijingBPizza

'披萨订单
class OrderPizza {
    +OrderPizza()
}

'上海披萨工厂
class ShanghaiFactory {
    +Pizza createPizza(String name)
}

'北京披萨工厂
class BeijingFactory {
    +Pizza createPizza(String name)
}

'抽象工厂
abstract class AbstractFactory {
    +{abstract} Pizza createPizza(String name)
}

'上海A披萨
class ShanghaiAPizza {
    +prepare()
}

'上海B披萨
class ShanghaiBPizza {
    +prepare()
}

'北京A披萨
class BeijingAPizza {
    +prepare()
}

'北京B披萨
class BeijingBPizza {
    +prepare()
}

'披萨抽象类
abstract class Pizza {
    +{abstract} prepare()
    +bake()
    +cut()
    +box()
}
@enduml